--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
 		<div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div>
+			<dl class="result answerers">
+			<dt>Post Count</dt>
+				<dd class="post_count"></dd>
+			<dt>Score</dt>
+				<dd class="score"></dd>
+			<dt>Profile Image</dt>
+				<dd class="profile_image"></dd>
+			<dt>Display Name</dt>
+				<dd class="display_name"></dd>
+		</dl>
+		<div class="error">
+			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
+		</div>
 	</div>
+
 </body>
 </html>
