only image left to do

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<dd class="score"></dd>
 			<dt>Profile Image</dt>
 				<dd class="profile_image"></dd>
-			<dt>Display Name</dt>
+			<dt>Answerer</dt>
 				<dd class="display_name"></dd>
 		</dl>
 		<div class="error">
