--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 			<dl class="result answerers">
 			<dt>Post Count</dt>
 				<dd class="post_count"></dd>
+			<dt>Acceptance Rate</dt>
+				<dd class="accept_rate"></dd>
 			<dt>Score</dt>
 				<dd class="score"></dd>
 			<dt>Profile Image</dt>
