--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div>
 			<dl class="result answerers">
+			<dt>Score</dt>
+				<dd class="score"></dd>
 			<dt>Post Count</dt>
 				<dd class="post_count"></dd>
 			<dt>Acceptance Rate</dt>
 				<dd class="accept_rate"></dd>
-			<dt>Score</dt>
-				<dd class="score"></dd>
+			
 			<dt>Profile Image</dt>
 				<dd class="profile_image"></dd>
 			<dt>Answerer</dt>
@@ -65,7 +66,9 @@
 		<div class="error">
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div>
+
 	</div>
+	<button class="next-page">Next Page</button>
 
 </body>
 </html>
